<resources>
    <string name="app_name">CookE</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="username_hint">Username</string>
    <string name="register_button_text">Register</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description_hint">Write a caption</string>
    <string name="logout_button_text">Logout</string>
    <string name="tagline">Sign up to see stories from your friends.</string>
    <string name="post_headline">Post your story</string>
    <string name="text_back_button">Back button</string>
    <string name="text_to_register">Don\'t have an account?&#160;</string>
    <string name="content_desc_post_button">Post photo button</string>
    <string name="text_to_login">Already have an account?&#160;</string>
    <string name="title_activity_maps">Where are them?</string>
    <string name="retry">Retry</string>
    <string name="kalori">Calorie (kkal)</string>
    <string name="lemak">Fat (g)</string>
    <string name="karbohidrat">Carbohydrate (g)</string>
    <string name="protein">Protein (g)</string>
    <string name="serat">Fiber (g)</string>
    <string name="kolesterol">Cholesterol (mg)</string>
    <string name="sodium">Sodium (mg)</string>
    <string name="potasium">Potassium (mg)</string>
    <string name="gula">Sugar (g)</string>
    <string name="kalsium">Calcium (mg)</string>
    <string name="zat_besi">Iron (mg)</string>
    <string name="vitamin_a">Vitamin A</string>
    <string name="vitamin_b">Vitamin B</string>
    <string name="vitamin_e">Vitamin E</string>
    <string name="vitamin_k">Vitamin K</string>
    <string name="vitamin_c">Vitamin C</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Commodo odio aenean sed adipiscing. Proin nibh nisl condimentum id venenatis a condimentum. Magna ac placerat vestibulum lectus mauris. Placerat vestibulum lectus mauris ultrices eros in. Amet dictum sit amet justo donec enim diam vulputate. Amet consectetur adipiscing elit ut aliquam purus sit. Velit sed ullamcorper morbi tincidunt ornare massa eget egestas purus. Commodo viverra maecenas accumsan lacus vel facilisis volutpat est velit. Magna etiam.</string>
    <string name="title_activity_nutritionist">NutritionistActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="mau_makan_apa_hari_ini">What do you want to eat today?</string>
    <string name="community">Community</string>
    <string name="post">Post</string>
    <string name="title">Title</string>
    <string name="recipe">Recipe</string>
    <string name="portion">Portion</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="popular_posts">Popular Posts</string>
    <string name="coming_soon">Something exciting is coming soon!</string>
    <string name="scan">Scan</string>
    <string name="scan_now">Scan now!</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="your_username">Your username</string>
    <string name="result">Result</string>
    <string name="description">Description</string>
    <string name="nutritionist">Nutritionist</string>
</resources>