<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cooke.activities.CommunityPostActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/previewImageView">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:fontFamily="@font/inter_semibold"
                    android:textAlignment="center"
                    android:text="@string/post"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_back"
        app:tint="@color/white"
        android:elevation="2dp"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        />

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/backgrounds/scenic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        android:background="@android:color/black"
        />

    <!--    app:srcCompat="@drawable/ic_place_holder"-->

    <EditText
        android:id="@+id/ed_title"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/title"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:padding="16dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_uploadFromGallery"
        app:layout_constraintTop_toBottomOf="@id/previewImageView" />

    <ImageView
        android:id="@+id/cameraXButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:paddingVertical="12dp"
        android:paddingStart="24dp"
        android:layout_marginEnd="16dp"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="@id/ed_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_camera"
        app:tint="?attr/colorPrimary"
        />

    <EditText
        android:id="@+id/ed_description"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/description_hint"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:padding="16dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/ed_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



    <ImageView
        android:id="@+id/iv_uploadFromGallery"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:paddingVertical="12dp"
        android:paddingStart="24dp"
        app:layout_constraintBottom_toBottomOf="@id/ed_title"
        app:layout_constraintEnd_toStartOf="@id/cameraXButton"
        app:layout_constraintTop_toTopOf="@id/ed_title"
        app:srcCompat="@drawable/ic_gallery"
        app:tint="?attr/colorPrimary"
        />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_description"
         />

    <!--    <Button-->
    <!--        android:id="@+id/uploadButton"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="56dp"-->
    <!--        android:layout_marginStart="8dp"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:layout_marginBottom="8dp"-->
    <!--        android:text="@string/upload"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->


</androidx.constraintlayout.widget.ConstraintLayout>

