<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.DetailRecipeActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="56dp"
            android:layout_height="56dp"

            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_back"
            app:tint="?attr/colorPrimary"
            android:elevation="2dp"
            />

        <ImageView
            android:id="@+id/iv_result_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="4:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_bold"
            app:layout_constraintTop_toBottomOf="@id/iv_result_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Title"
            android:textColor="?attr/colorPrimary"
            />

        <HorizontalScrollView
            android:id="@+id/sv_nutrition"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:background="@drawable/bg_bottom_navigation">

                    <TextView
                        android:id="@+id/tv_kalori"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Value"
                        android:layout_above="@id/tv_kaloriTitle"
                        android:textColor="@android:color/white"
                        android:fontFamily="@font/inter_bold"
                        android:textSize="32sp"
                        android:gravity="center"
                        />

                    <TextView
                        android:id="@+id/tv_kaloriTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:fontFamily="@font/inter_light"
                        android:gravity="center"
                        android:text="@string/kalori"
                        android:layout_marginBottom="10dp"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:background="@drawable/bg_bottom_navigation">

                    <TextView
                        android:id="@+id/tv_lemak"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Value"
                        android:layout_above="@id/tv_lemakTitle"
                        android:textColor="@android:color/white"
                        android:fontFamily="@font/inter_bold"
                        android:textSize="32sp"
                        android:gravity="center"
                        />

                    <TextView
                        android:id="@+id/tv_lemakTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:fontFamily="@font/inter_light"
                        android:gravity="center"
                        android:text="@string/lemak"
                        android:layout_marginBottom="10dp"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:background="@drawable/bg_bottom_navigation">

                    <TextView
                        android:id="@+id/tv_karbohidrat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Value"
                        android:layout_above="@id/tv_karbohidratTitle"
                        android:textColor="@android:color/white"
                        android:fontFamily="@font/inter_bold"
                        android:textSize="32sp"
                        android:gravity="center"
                        />

                    <TextView
                        android:id="@+id/tv_karbohidratTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:fontFamily="@font/inter_light"
                        android:gravity="center"
                        android:text="@string/karbohidrat"
                        android:layout_marginBottom="10dp"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:background="@drawable/bg_bottom_navigation">

                    <TextView
                        android:id="@+id/tv_protein"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Value"
                        android:layout_above="@id/tv_proteinTitle"
                        android:textColor="@android:color/white"
                        android:fontFamily="@font/inter_bold"
                        android:textSize="32sp"
                        android:gravity="center"
                        />

                    <TextView
                        android:id="@+id/tv_proteinTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:fontFamily="@font/inter_light"
                        android:gravity="center"
                        android:text="@string/protein"
                        android:layout_marginBottom="10dp"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:background="@drawable/bg_bottom_navigation">

                    <TextView
                        android:id="@+id/tv_serat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Value"
                        android:layout_above="@id/tv_seratTitle"
                        android:textColor="@android:color/white"
                        android:fontFamily="@font/inter_bold"
                        android:textSize="32sp"
                        android:gravity="center"
                        />

                    <TextView
                        android:id="@+id/tv_seratTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:fontFamily="@font/inter_light"
                        android:gravity="center"
                        android:text="@string/serat"
                        android:layout_marginBottom="10dp"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="4dp"
                    android:background="@drawable/bg_bottom_navigation">

                    <TextView
                        android:id="@+id/tv_kolesterol"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Value"
                        android:layout_above="@id/tv_kolesterolTitle"
                        android:textColor="@android:color/white"
                        android:fontFamily="@font/inter_bold"
                        android:textSize="32sp"
                        android:gravity="center"
                        />

                    <TextView
                        android:id="@+id/tv_kolesterolTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:fontFamily="@font/inter_light"
                        android:gravity="center"
                        android:text="@string/kolesterol"
                        android:layout_marginBottom="10dp"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                </RelativeLayout>

                <!-- Add more RelativeLayouts for other pairs of TextViews -->

            </LinearLayout>
        </HorizontalScrollView>


        <TextView
            android:id="@+id/header_porsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"

            android:layout_marginHorizontal="16dp"
            android:text="Portion"
            android:fontFamily="@font/inter_bold"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_nutrition" />

        <TextView
            android:id="@+id/tv_porsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"

            android:fontFamily="@font/inter"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/header_porsi"
            tools:text="5 Juta Triliun"
            />
        <TextView
            android:id="@+id/header_bahan"
            android:layout_marginTop="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"

            android:text="Bahan"
            android:fontFamily="@font/inter_bold"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_porsi" />

        <TextView
            android:id="@+id/tv_bahan"
            android:layout_marginHorizontal="16dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/header_bahan"
            tools:text="5 Juta Triliun"
            />
        <TextView
            android:id="@+id/header_langkah"
            android:layout_marginTop="18dp"
            android:layout_marginHorizontal="16dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Langkah"
            android:fontFamily="@font/inter_bold"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_bahan" />

        <TextView
            android:id="@+id/tv_langkah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"

            android:fontFamily="@font/inter"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/header_langkah"
            tools:text="laskdjalksdhaklsdaklsjdaklsd aslkdjaskldhajksd akjsdhakjshd kjashdjkahsd akjshdasd  alksdj alksjd akls dlaksdj als askjdaksjdhanksjdhnakjsd akjshd sdj kashd kajshdakjshdnkajshdnajks dkjashdnakjshdnasjkhda sd"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
